--- a/.harness/Docker_Dmontanez.yaml
+++ b/.harness/Docker_Dmontanez.yaml
@@ -1,12 +1,11 @@
 connector:
   name: Docker Dmontanez
   identifier: Docker_Dmontanez
-  description:
   orgIdentifier: default
   projectIdentifier: DanF
   type: DockerRegistry
   spec:
-    dockerRegistryUrl: https://hub.docker.com/
+    dockerRegistryUrl: https://registry.hub.docker.com/v2/
     providerType: DockerHub
     auth:
       type: UsernamePassword
