--- a/sandbox-ng/ng-local-namespace-pipeline.yaml
+++ b/sandbox-ng/ng-local-namespace-pipeline.yaml
@@ -171,7 +171,7 @@ pipeline:
                                                     branch: master
                                             skipResourceVersioning: false
                   infrastructure:
-                      environmentRef: Prod
+                      environmentRef: envprod
                       infrastructureDefinition:
                           type: KubernetesDirect
                           spec:
