Update template Deploy to QA

--- a/.harness/Deploy_to_QA_10.yaml
+++ b/.harness/Deploy_to_QA_10.yaml
@@ -27,7 +27,7 @@ template:
                     type: KubernetesDirect
                     spec:
                         connectorRef: danfmacconnector
-                        namespace: default
+                        namespace: temp-qa
                         releaseName: release-<+INFRA_KEY>
                 allowSimultaneousDeployments: false
                 environmentRef: QA
