--- a/.harness/Deploy_to_QA_10.yaml
+++ b/.harness/Deploy_to_QA_10.yaml
@@ -20,7 +20,7 @@ template:
                                 spec:
                                     connectorRef: Docker_Dmontanez
                                     imagePath: library/nginx
-                                    tag: <+input>
+                                    tag: <+input>.allowedValues(latest,1.2.10,3.5.0)
                                 type: DockerRegistry
                             sidecars:
                                 - sidecar:
