--- a/.harness/PR_piipeline.yaml
+++ b/.harness/PR_piipeline.yaml
@@ -37,6 +37,14 @@ pipeline:
             rollbackSteps: []
           service:
             serviceRef: guestbook
+            serviceInputs:
+              serviceDefinition:
+                type: Kubernetes
+                spec:
+                  artifacts:
+                    primary:
+                      primaryArtifactRef: <+input>
+                      sources: <+input>
           environment:
             environmentRef: Dev
             deployToAll: false
