Update pipeline PR piipeline

--- a/.harness/PR_piipeline.yaml
+++ b/.harness/PR_piipeline.yaml
@@ -79,3 +79,5 @@ pipeline:
                 - AllErrors
               action:
                 type: StageRollback
+        delegateSelectors:
+          - helm-delegate
