Update connector Docker Dmontanez

--- a/.harness/Docker_Dmontanez.yaml
+++ b/.harness/Docker_Dmontanez.yaml
@@ -12,5 +12,4 @@ connector:
       spec:
         username: dmontanez
         passwordRef: df_docker_pw
-    delegateSelectors:
-    - df-mac-ng
+    executeOnDelegate: false
