Update pipeline PR piipeline

--- a/.harness/PR_piipeline.yaml
+++ b/.harness/PR_piipeline.yaml
@@ -53,7 +53,7 @@ pipeline:
                   spec: {}
             rollbackSteps: []
           service:
-            serviceRef: guestbook
+            serviceRef: guestbookpr
             serviceInputs:
               serviceDefinition:
                 type: Kubernetes
