Update pipeline PR piipeline

--- a/.harness/PR_piipeline.yaml
+++ b/.harness/PR_piipeline.yaml
@@ -80,4 +80,4 @@ pipeline:
               action:
                 type: StageRollback
         delegateSelectors:
-          - helm-delegate
+          - kubernetes-delegate
