--- a/.harness/hostedbuild.yaml
+++ b/.harness/hostedbuild.yaml
@@ -11,7 +11,7 @@ pipeline:
         description: ""
         type: CI
         spec:
-          cloneCodebase: false
+          cloneCodebase: true
           platform:
             os: Linux
             arch: Amd64
@@ -40,3 +40,8 @@ pipeline:
       description: ""
       required: false
       value: <+input>
+  properties:
+    ci:
+      codebase:
+        repoName: <+input>
+        build: <+input>
